# m5atom-rust-wasm

./: LICENSE  Makefile  README.md  platformio.ini
app/: .gitignore  Cargo.toml  build  build.sh  clean
app/src/: app.rs  arduino.rs
vm/: wasm_vm.cpp
